results/SVCOMP/0-shot/log-boolean2-2024_03_19_00_22_48.txt
import java.util.Random;

public class boolean2 {
  //@ requires true;
  //@ ensures \result == (\result == !b);
  public static boolean fun() {
    boolean b = new Random().nextBoolean();
    boolean result = f(b);
    return result == !b;
  }

  //@ requires true;
  //@ ensures \result == !b;
  public static boolean f(boolean b) {
    return !b;
  }
}
/home/max/Documents/JMLGPT/tmp/boolean2.java:5: error: cannot find symbol
  //@ ensures \result == (\result == !b);
                                      ^
  symbol:   variable b
  location: class boolean2
1 error

